@@ -20,4 +20,6 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
 }
